src/static/assets/th-2020/app.css
/* ... */
.tamu-button:hover {
    background-color: #D47082 !important;
}

.hh-button {
    border-radius: 4px!important;
    background-color: #3E678C !important;
}

.hh-button:hover {
    background-color: #2E4D68 !important;
}

footer {
    border: 5px solid black;
    padding: 20px 10vw 10px;
    width: 100%;
}

.black-box {
    background-color: #FF5482;
    position: relative;
    height: 75px;
    bottom: -90px;
    left: 0;
    width: 100%;
    z-index: -2;
}

footer .nav-link {
    display: inline-block !important;
}

footer .nav-link img {
    height: 20px;
}


/*--------------------------------------*/

@media (max-width: 992px) {
    .left,
    .right {
        margin-left: auto;
        margin-right: auto;
    }
    #top-nav-bar {
        padding-top: 35px !important;
        padding-right: 15vw !important;
        padding-left: 10vw !important;
    }
    .sponsor-container {
        margin: 0;
    }
    #logo-2020 {
        margin-top: 10px;
    }
    footer {
        margin-top: 50px;
    }
    #pwc-logo,
    #bp-logo {
        margin-top: 0px;
    }
    #jpmc-logo {
        max-width: 300px;
    }
    #about {
        margin-top: 20px;
    }
    .container-fluid {
        padding-left: 5vw;
        padding-right: 5vw;
    }
    #mlh-banner-tag {
        display: none;
    }
    .th-text-logo {
        opacity: 0;
    }
    .tamuhack-title {
        max-width: 300px;
        top: 30vh;
        transform: translate(-50%, -50%);
    }
    h2 {
        font-size: 1.4rem;
    }
    p {
        font-size: 14px;
    }
    .navbar {
        padding-left: 10px!important;
    }
    #top-nav-bar div ul li {
        padding: 0px 30px;
    }
    .nav-link {
        display: inline-block;
    }
    #landing-graphic {
        transform: none;
        position: static;
        flex: 0 0 100%;
        margin-top: calc(500px - 28vw);
        margin-bottom: 62px;
        margin-left: 3vw;
    }
    #landing {
        margin-bottom: 100px;
    }
    #landing .col-lg-5 {
        display: flex;
    }
    #landing .col-lg-5 img {
        align-self: flex-end;
        flex: 0 0 90%;
        margin: 60px auto auto;
        max-width: 500px;
    }
    #landing .bg-wrapper {
        border: 5px solid black;
        outline: 5px solid black;
        outline-offset: 35px;
        top: 40px;
        left: 40px;
        width: calc(98vw - 80px);
        height: calc(98vh - 80px);
    }
    #left-bar {
        width: 35px;
        left: 18px;
        top: 60px;
        height: 0px;
    }
    #top-bar {
        height: 35px;
        top: 25px;
        right: 0px;
        animation-name: fill-horizontal-rect-small;
    }
    #right-bar {
        width: 35px;
        bottom: -60px;
        height: 0px;
    }
    #bottom-bar {
        height: 35px;
        bottom: -95px;
        left: 17.5px;
        animation-name: fill-horizontal-rect-small;
    }
    .landing-info-wrapper .header-info {
        margin-bottom: 20px;
    }
    .landing-info-wrapper h4 {
        font-size: 1.5rem;
    }
}

@media (max-width: 776px) {
    h1 {
        font-size: 2rem;
    }
    h4 {
        font-size: 1.2rem;
    }
    .th-logo {
        width: 20px;
    }
    #logo-2020 {
        max-width: 300px;
    }
    .mb-5 {
        margin-bottom: 1.5rem!important;
    }
    .container-fluid {
        margin-bottom: 40px;
    }
    .navbar .nav-item {
        margin: 0;
    }
    #email-tag {
        font-size: 1rem;
        font-weight: 500;
    }
    #left-bar {
        width: 35px;
        left: 18px;
        top: 60px;
        height: 0px;
    }
    #top-bar {
        height: 35px;
        top: 25px;
        right: 0px;
        animation-name: fill-horizontal-rect-small;
    }
    #right-bar {
        width: 35px;
        bottom: -60px;
        height: 0px;
    }
    #bottom-bar {
        height: 35px;
        bottom: -95px;
        left: 17.5px;
        animation-name: fill-horizontal-rect-small;
    }
    #landing .row {
        padding: 10px;
        padding-left: 6vw;
    }
    .landing-info-wrapper {
        position: relative;
        padding: 10px;
        text-align: left;
    }
    .landing-info-wrapper h4 {
        font-size: 1.5rem;
    }
    .landing-info-wrapper .header-info {
        margin-bottom: 0px;
    }
    #landing .col-lg-5 img {
        max-width: 325px;
        margin: 80px auto 60px;
    }
    #email-form input {
        width: 100%;
        margin: 0px !important;
    }
    #email-form .input-group-append,
    #email-form button,
    #email-form .btn {
        width: 100%;
        margin: 0px !important;
    }
    #email-form button,
    #email-form .btn {
        padding: 7.5px !important;
        margin-top: 5px !important;
    }
    #top-nav-bar {
        padding-top: 45px !important;
    }
    .d-block-sm-none {
        display: none !important;
    }
    input.form-control {
        padding: 22px 14px;
    }
    #top-nav-bar div .main-nav-ui li>a {
        font-size: 14px;
    }
    #aa-logo {
        width: 90%;
    }
}

@media (max-width: 576px) {
    #landing .row {
        width: auto;
    }
    .landing-info-wrapper h4,
    #email-tag {
        font-size: 1.0rem;
    }
    #landing .col-lg-5 img {
        margin-bottom: 30px;
    }
    input[type=email] {
        font-size: 14px;
    }
}

@keyframes fill-horizontal-rect {
    from {
        width: 0px;
    }
    to {
        width: calc(100% - 35px);
    }
}

@keyframes fill-vertical-rect {
    from {
        height: 0px;
    }
    to {
        height: 100%;
    }
}

@keyframes fill-horizontal-rect-small {
    from {
        width: 0px;
    }
    to {
        width: calc(100% - 17.5px);
    }
}

